# practice

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
practice/: hello_world.py  singleton.py
tests/: test_practice.py  test_singleton.py
